--- a/assignment4.qmd
+++ b/assignment4.qmd
@@ -8,7 +8,7 @@ editor: visual
 
 This is an individual assignment. Turn in this assignment as an HTML or PDF file to ELMS. Make sure to include the R Markdown or Quarto file that was used to generate it. Include the GitHub link for the repository containing these files.
 
-Github link:
+Github link: [//github.com/beining619/BeiningNiu727](https://github.com/beining619/BeiningNiu727.git)
 
 ```{r}
 #| include: false 
@@ -27,7 +27,7 @@ Go to <https://console.cloud.google.com> and make sure you are logged in a non-u
 After you have initialized a project, paste your project ID into the following chunk.
 
 ```{r}
-project <- "surv-727-test"
+project <- "valued-range-477220-s6"
 ```
 
 We will connect to a public database, the Chicago crime database, which has data on crime in Chicago.
