--- a/assignment5.qmd
+++ b/assignment5.qmd
@@ -10,7 +10,6 @@ You may work in pairs or individually for this assignment. Make sure you join a 
 Github link: [//github.com/beining619/BeiningNiu727](https://github.com/beining619/BeiningNiu727.git)
 
 ```{r}
-#| eval: false
 library(censusapi)
 library(tidyverse)
 library(magrittr)
@@ -26,7 +25,6 @@ In this notebook, we use the Census API to gather data from the American Communi
 https://api.census.gov/data/key_signup.html
 
 ```{r}
-#| eval: false
 acs_il_c <- getCensus(name = "acs/acs5",
                     vintage = 2016,
                     vars = c("NAME", 
@@ -45,7 +43,6 @@ head(acs_il_c)
 Pull map data for Illinois into a data frame.
 
 ```{r}
-#| eval: false
 il_map <- map_data("county", region = "illinois")
 head(il_map)
 ```
@@ -61,7 +58,6 @@ acs_map <- inner_join(il_map, acs_il_c, by = "subregion")
 After you do this, plot a map of Illinois with Counties colored by per capita income.
 
 ```{r}
-#| eval: false
 
 ggplot(acs_map) + 
   geom_polygon(aes(x = long, 
@@ -74,16 +70,44 @@ ggplot(acs_map) +
 
 We want to find clusters of counties that are similar in their population, average household income and per capita income. First, clean the data so that you have the appropriate variables to use for clustering. Next, create the distance matrix of the cleaned data. This distance matrix can be used to cluster counties, e.g. using the ward method.
 
+```{r}
+h_cluster_data <- acs_il_c %>%
+  select(pop, hh_income, income) %>%
+  na.omit() %>%
+  scale()
+
+rownames(h_cluster_data) <- acs_il_c$subregion[complete.cases(acs_il_c %>% select(pop, hh_income, income))]
+
+dist_mat <- dist(h_cluster_data, method = "euclidean")
+hc_ward <- hclust(dist_mat, method = "ward.D2")
+```
+
 Plot the dendrogram to find a reasonable number of clusters. Draw boxes around the clusters of your cluster solution.
 
+```{r}
+fviz_dend(hc_ward, k = 5, rect = TRUE, cex = 0.5, main = "Cluster Dendrogram")
+```
+
 Visualize the county clusters on a map. For this task, create a new `acs_map` object that now also includes cluster membership as a new column. This column should be called `cluster`.
+
+```{r}
+cluster_groups <- cutree(hc_ward, k = 5)
+acs_il_c_geo <- acs_il_c %>%
+  filter(subregion %in% names(cluster_groups)) %>%
+  mutate(cluster = as.factor(cluster_groups))
+
+acs_map_cluster <- inner_join(il_map, acs_il_c_geo, by = "subregion")
+ggplot(acs_map_cluster) +
+  geom_polygon(aes(x = long, y = lat, group = group, fill = cluster), color = "gray", size = 0.1) +
+  coord_quickmap() +
+  labs(title = "Hierarchical Clustering Map")
+```
 
 ## Census Tracts
 
 For the next section we need ACS data on a census tract level. We use the same variables as before.
 
 ```{r}
-#| eval: false
 acs_il_t <- getCensus(name = "acs/acs5",
                     vintage = 2016,
                     vars = c("NAME", 
@@ -92,7 +116,7 @@ acs_il_t <- getCensus(name = "acs/acs5",
                              "B19301_001E"),
                     region = "tract:*",
                     regionin = "state:17",
-                    key = cs_key) %<>%
+                    key = cs_key) %>%
             mutate_all(funs(ifelse(.==-666666666, NA, .))) %>%
             rename(pop = B01003_001E,
                    hh_income = B19013_001E,
@@ -104,14 +128,66 @@ head(acs_il_t)
 
 As before, clean our data for clustering census tracts based on population, average household income and per capita income.
 
+```{r}
+acs_il_t_clean <- acs_il_t %>% na.omit()
+t_cluster_data <- acs_il_t_clean %>%
+  select(pop, hh_income, income) %>%
+  scale()
+```
+
 Since we want to use K Means in this section, we start by determining the optimal number of K that results in Clusters with low within but high between variation. Plot within cluster sums of squares for a range of K (e.g. up to 20).
+
+```{r}
+fviz_nbclust(t_cluster_data, kmeans, method = "wss", k.max = 20)
+```
 
 Run `kmeans()` for the optimal number of clusters based on the plot above.
 
+```{r}
+set.seed(123)
+km_res <- kmeans(t_cluster_data, centers = 6, nstart = 25)
+```
+
 Find the mean population, household income and per capita income grouped by clusters. In addition, display the most frequent county that can be observed within each cluster.
+
+```{r}
+acs_il_t_clean$cluster <- km_res$cluster
+print("Mean values by cluster:")
+acs_il_t_clean %>%
+  group_by(cluster) %>%
+  summarise(
+    mean_pop = mean(pop),
+    mean_hh_income = mean(hh_income),
+    mean_income = mean(income)
+  )
+```
+
+```{r}
+print("Most frequent county by cluster:")
+acs_il_t_clean %>%
+  mutate(county_name = str_extract(NAME, "(?<=, )[^,]+(?=,)")) %>%
+  count(cluster, county_name) %>%
+  group_by(cluster) %>%
+  slice_max(n, n = 1) %>% 
+  select(cluster, county_name, n)
+```
 
 As you might have seen earlier, it's not always clear which number of clusters is the optimal choice. To automate K Means clustering, program a function based on `kmeans()` that takes K as an argument. You can fix the other arguments, e.g. such that a specific dataset is always used when calling the function.
 
 We want to utilize this function to iterate over multiple Ks (e.g., K = 2, ..., 10) and -- each time -- add the resulting cluster membership as a new variable to our (cleaned) original data frame (`acs_il_t`). There are multiple solutions for this task, e.g. think about the `apply` family or `for` loops.
 
 Finally, display the first rows of the updated data set (with multiple cluster columns).
+
+```{r}
+run_kmeans <- function(k) {
+  set.seed(123)
+  kmeans(t_cluster_data, centers = k, nstart = 25)$cluster
+}
+
+for (k in 2:10) {
+  col_name <- paste0("cluster_", k)
+  acs_il_t_clean[[col_name]] <- run_kmeans(k)
+}
+
+head(acs_il_t_clean)
+```
